--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,8 +9,8 @@ sites:
     url: https://gigakarma.pl
   - name: GigaKarma Blog
     url: https://gigakarma.pl/blog
-  - name: Test
-    url: https://thissitedoesnotexist.koj.co
+  - name: alksjd
+    url: https://aososoos.co.uk
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
