--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,7 +10,7 @@ sites:
   - name: GigaKarma Blog
     url: https://gigakarma.pl/blog
   - name: alksjd
-    url: https://aososoos.co.uk
+    url: https://google.com
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
